[package]
name = "hts221-async"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "Async driver for the HTS221 temperature sensor."
repository = "https://github.com/drogue-iot/hts221-async"
categories = [
    "embedded",
    "no-std",
]

[dependencies]
embedded-hal-async = "0.1.0-alpha.3"
defmt = { version = "0.3", optional = true }
